[tool.poetry]
name = "repl_python3_basalt-encryptor"
version = "0.1.0"
description = ""
authors = ["KeremGoksu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-baseconv = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
